# axbot

./: .gitignore  LICENSE  READMD.md  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature.yml  feature_request.md  报告错误.md  需求建议.md
.github/workflows/: build_and_release_v1.yml  build_and_release_v2.yml  build_docker_image.yml  build_image_v1.yml  build_image_v2.yml  codeql.yml  release.yml
app/: .gitignore  Dockerfile  build.gradle.kts
app/src/main/resources/: application.yml  banner.txt  log4j2-spring.xml
app/src/main/resources/card/: tarot.json
app/src/main/resources/simbot-bots/: local.qqguild.bot.json
core/: .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
core/axbot-bot/: build.gradle.kts
core/axbot-crawler/: build.gradle.kts
core/axbot-engine/: build.gradle.kts
core/axbot-remote/: build.gradle.kts
core/axbot-server/: build.gradle.kts
core/axbot-server/src/main/resources/: application.yml
crawler/: Dockerfile  main.py  main_test.py  pyproject.toml  requirements.txt  test.py
crawler/crawler/: driver.py  driver_test.py  main.py  main_test.py  mq.py
deploy/: .env.example  docker-compose.yml
docs/: deploy_guide.md  develop_guide.md  user_guide.md
script/: deploy.sh
server/: .gitignore  Dockerfile  pom.xml
server/axbot-api/: pom.xml
server/axbot-api/src/main/resources/: application.yml  (+1 more)
server/axbot-bot/: pom.xml
server/axbot-crawler/: pom.xml
server/axbot-dao/: pom.xml
server/axbot-service/: pom.xml
(+672 files in other folders)
