[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["axiangcoding <axiangcoding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pika = "^1.3.2"
drissionpage = "^3.2.33"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
